tests/models/struct/unnamed/bool/fail/min_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_length = 2)]
    bool
);
fn main() {}
